--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,8 @@
     "next/core-web-vitals"
   ],
   "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
     "react/no-unescaped-entities": "off",
     "@next/next/no-page-custom-font": "off",
-    "@typescript-eslint/no-explicit-any": "off"
   }
 }
